# MidiEditor_AI

./: .gitignore  Brewfile  CHANGELOG.md  CHANGELOG_TEMPLATE.md  CMakeLists.txt  CONTRIBUTORS  Makefile  MidiEditorAI.icns  PLAYGROUND.md  README.md  build.bat  build_tests.bat  midieditor.pro  midieditor.rc  release.bat  resources.qrc
.github/: FUNDING.yml
.github/workflows/: ci.yml  cmake-build.yml  deploy-pages.yml  deploy-pages.yml.disabled  qmake.yml.disabled  release.yml  xmake.yml
Planning/: 02_ROADMAP.md
cloudflare/: README.md  rendezvous.js  wrangler.toml
examples/: Mozart_by_gemini_agent.mid  Mozart_by_gemini_agent.mov  Mozart_by_gemini_agent_FFXIV.mid  Mozart_by_gemini_agent_FFXIV.mov
lame/: config.h
macos/: Info.plist.in
manual/: 404.html  CNAME  audio.css  changelog.html  collab-chat.html  collab-cloudflare.html  collab-discord.html  collab-lan.html  collab-pr.html  collab-settings.html  collab-show-mode.html  collab-wan.html  collaboration.html  commodore-64.html  cursor-time-display.html  docs-index.html  download.html  editing-midi-files.html  editor-and-components.html  editor-groups.html  export-audio.html  ffxiv-channel-fixer.html  ffxiv-drum-split.html  ffxiv-voice-limiter.html  guitar-pro.html  happy_tunes.webm  index.html  index_old_backup.html  introduction.html  lightbox.js  logging.html  lyrics.html  mcp-server.html  menu-edit.html  menu-file.html  menu-midi.html  menu-playback.html  menu-reference.html  menu-tools.html  menu-view.html  (+18 more)
manual/midi/: 8-bit-game-soundtrack.mid  8-bit-game-soundtrack_fith.mid  8-bit-game-soundtrack_measures.mid  8-bit-game-soundtrack_velocities.mid  MidiEditro_AI-lo-fi.mid  midieditor_ai_MCP.mid  midieditor_ai_piano_piece.mid  piano_Countermelody.mid  piano_Reharmonize.mid  piano_accompaniment.mid  piano_add_chords.mid  piano_drum.mid  piano_extend.mid  piano_velocity_variations.mid
manual/mov/: MidiEditro_AI-lo-fi.mov
manual/screenshots/: MidiPilot_Agent_run.webm  c64-tune.webm  channel_splitting.webm  collab_connection_test.webm  editor-groups-clone.webm  editor-groups-collapsed-chip.webm  editor-groups-drag.webm  ffxiv-drum-split.webm  ffxiv_channel_fix_Preserve.webm  ffxiv_channel_fix_rebuild.webm  live_LAN_pc1.webm  live_LAN_pc2.webm  live_WAN_pc2.webm  live_WAN_pc_1.webm  lyric_visualizer_closeup.webm  lyric_visualizer_sweep_dark.webm  lyric_visualizer_sweep_sakura.webm  midi_visualizer.webm  midieditor_ai_gemini_31_streaming.webm  midieditor_ai_gpt54_streaming_material_dark.webm  midieditor_ai_gpt_simple_gpt55.webm  midipilot-input-bar.webm  smooth_playback_scrolling.webm  voice_limiter_ffxiv.webm
run_environment/: updater.bat
scripts/: build.bat  build_changelog.py  build_clean.bat  build_tests.bat  dedash.py  inject_doc_subnav.py  release.bat  reset_settings.bat
src/: LoggingConfig.cpp  LoggingConfig.h  Terminal.cpp  main.cpp
src/MidiEvent/: KeySignatureEvent.cpp  MidiEvent.cpp  MidiEvent.h  NoteOnEvent.cpp  NoteOnEvent.h  OffEvent.cpp  OnEvent.cpp  OnEvent.h  PitchBendEvent.cpp  TempoChangeEvent.cpp  TimeSignatureEvent.cpp
src/ai/: AgentRunner.cpp  AgentRunner.h  AgentToolPolicy.cpp  AgentToolPolicy.h  AiClient.cpp  AiClient.h  ConversationStore.cpp  ConversationStore.h  EditorContext.cpp  EditorContext.h  FFXIVChannelFixer.cpp  FFXIVChannelFixer.h  FfxivVoiceAnalyzer.cpp  FfxivVoiceAnalyzer.h  FfxivVoiceLoadCore.cpp  FfxivVoiceLoadCore.h  McpServer.cpp  McpServer.h  MidiEventSerializer.cpp  MidiEventSerializer.h  ModelFavorites.cpp  ModelFavorites.h  ModelListCache.cpp  ModelListCache.h  ModelListFetcher.cpp  ModelListFetcher.h  PromptProfile.h  PromptProfileStore.cpp  PromptProfileStore.h  ToolDefinitions.cpp  ToolDefinitions.h
src/collab/: CollabHistoryFile.cpp  CollabHistoryFile.h  CollabIdentity.cpp  CollabIdentity.h  CollabService.cpp  CollabService.h  HistoryReconciliation.cpp  HistoryReconciliation.h  ILiveClient.h  ILiveServer.h  IPeerLink.h  IceConfig.cpp  IceConfig.h  LanDiscovery.cpp  LanDiscovery.h  LanLiveSession.cpp  LanLiveSession.h  LanTransport.cpp  LanTransport.h  MidiDiff.cpp  MidiDiff.h  MidiHash.cpp  MidiHash.h  MidiSnapshot.cpp  MidiSnapshot.h  PrApply.cpp  PrApply.h  PrBundle.cpp  PrBundle.h  RtcRendezvousClient.cpp  RtcRendezvousClient.h  RtcSignalingToken.cpp  RtcSignalingToken.h  SessionMode.h  WanConnectionTest.cpp  WanConnectionTest.h  WebRtcLiveClient.cpp  WebRtcLiveClient.h  WebRtcLiveServer.cpp  WebRtcLiveServer.h  (+6 more)
src/converter/: LrcExporter.cpp  LrcExporter.h  SrtParser.cpp  SrtParser.h  TempoConversionService.cpp  TempoConversionService.h
src/gui/: AboutDialog.cpp  AboutDialog.h  AiSettingsWidget.cpp  AiSettingsWidget.h  Appearance.cpp  Appearance.h  AppearanceSettingsWidget.cpp  AppearanceSettingsWidget.h  AutoUpdater.cpp  AutoUpdater.h  C64Mode.cpp  C64Mode.h  C64ModeSwitchWidget.cpp  C64ModeSwitchWidget.h  C64SoundFontHelper.cpp  C64SoundFontHelper.h  C64ToggleWidget.cpp  C64ToggleWidget.h  ChannelListWidget.cpp  ChannelListWidget.h  ChannelVisibilityManager.cpp  ChannelVisibilityManager.h  ClickButton.cpp  (+96 more)
tests/: CMakeLists.txt  test_agent_runner_state.cpp  test_agent_tool_policy.cpp  test_channel_events.cpp  test_channel_visibility_manager.cpp  test_chord_detector.cpp  test_collab_history_file.cpp  test_collab_identity.cpp  test_conversation_store.cpp  test_document_manager.cpp  test_drum_kit_preset.cpp  test_event_perf.cpp  test_ffxiv_equalizer_service.cpp  test_ffxiv_fixer_resync.cpp  test_ffxiv_voice_analyzer.cpp  test_gp_binary_reader.cpp  test_gp_to_native.cpp  test_gp_unzip.cpp  test_history_reconciliation.cpp  test_ice_config.cpp  test_import_only_formats.cpp  test_logging_config.cpp  test_lrc_exporter.cpp  test_meta_events.cpp  test_midi_channel.cpp  test_midi_diff.cpp  test_midi_event.cpp  test_midi_hash.cpp  test_midi_track.cpp  test_mml_converter.cpp  test_mml_midi_writer.cpp  test_model_favorites.cpp  test_model_list_fetcher.cpp  test_musicxml_export.cpp  test_note_pairing.cpp  test_paste_special_dialog.cpp  test_pr_bundle.cpp  test_prompt_profiles.cpp  test_protocol.cpp  test_provider_matrix.cpp  (+18 more)
tests/data/: README.md
(+140 files in other folders)
